[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phi-shield"
version = "0.1.0"
description = "Fast PHI/PII scanner for LLM pipelines. HIPAA, PCI-DSS, GDPR in <1ms."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Amado Alvarez Sueiras" }]
keywords = ["phi", "pii", "hipaa", "healthcare", "compliance", "llm", "scanner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/amadoalvarez/phi-shield"
