[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phi-shield"
version = "0.1.0"
description = "Fast PHI/PII scanner for LLM pipelines. HIPAA, PCI-DSS, GDPR in <1ms."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Amado Alvarez Sueiras" }]
keywords = ["phi", "pii", "hipaa", "healthcare", "compliance", "llm", "scanner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
phi-shield = "phi_shield.cli:main"

[project.urls]
Homepage = "https://github.com/ama2alvarez-1990/phi-shield"
Repository = "https://github.com/ama2alvarez-1990/phi-shield"
Issues = "https://github.com/ama2alvarez-1990/phi-shield/issues"
